--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
+    "autoprefixer": "^10.4.14",
+    "node-sass": "^9.0.0",
+    "sass": "^1.63.6",
+    "postcss": "^8.4.27",
+    "sass-loader": "^13.3.2",
+    "tailwindcss": "^3.3.3",
     "vite": "^4.4.0"
   }
 }
